// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToastContainer should match snapshot (alert) 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #CD2C23;
  color: #FFFFFF;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c5 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #FFFFFF;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<div
    class="c0"
    role="status"
    type="alert"
  >
    <svg
      aria-label="alert"
      class="c1"
      color="currentColor"
      focusable="true"
      height="16"
      icon-name="alert-octagon"
      role="img"
      type="alert"
      width="16"
    />
    <p
      class="c2"
    >
      a message
    </p>
    <button
      aria-label="Dismiss notification"
      class="c3 c4 c5"
      data-testid="dismiss"
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="16"
        icon-name="x"
        width="16"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ToastContainer should match snapshot (discovery) 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #602FA0;
  color: #FFFFFF;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c5 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #FFFFFF;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<div
    class="c0"
    role="status"
    type="discovery"
  >
    <svg
      aria-label="discovery"
      class="c1"
      color="currentColor"
      focusable="true"
      height="16"
      icon-name="lightbulb"
      role="img"
      type="discovery"
      width="16"
    />
    <p
      class="c2"
    >
      a message
    </p>
    <button
      aria-label="Dismiss notification"
      class="c3 c4 c5"
      data-testid="dismiss"
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="16"
        icon-name="x"
        width="16"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ToastContainer should match snapshot (neutral) 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #60666E;
  color: #FFFFFF;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c5 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #FFFFFF;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<div
    class="c0"
    role="status"
    type="neutral"
  >
    <svg
      aria-label="information"
      class="c1"
      color="currentColor"
      focusable="true"
      height="16"
      icon-name="info"
      role="img"
      type="neutral"
      width="16"
    />
    <p
      class="c2"
    >
      a message
    </p>
    <button
      aria-label="Dismiss notification"
      class="c3 c4 c5"
      data-testid="dismiss"
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="16"
        icon-name="x"
        width="16"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ToastContainer should match snapshot (success) 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #008533;
  color: #FFFFFF;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c5 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #FFFFFF;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<div
    class="c0"
    role="status"
    type="success"
  >
    <svg
      aria-label="success"
      class="c1"
      color="currentColor"
      focusable="true"
      height="16"
      icon-name="check"
      role="img"
      type="success"
      width="16"
    />
    <p
      class="c2"
    >
      a message
    </p>
    <button
      aria-label="Dismiss notification"
      class="c3 c4 c5"
      data-testid="dismiss"
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="16"
        icon-name="x"
        width="16"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ToastContainer should match snapshot (warning) 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #F5A200;
  color: #1B1C1E;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c5 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #1B1C1E;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<div
    class="c0"
    role="status"
    type="warning"
  >
    <svg
      aria-label="warning"
      class="c1"
      color="currentColor"
      focusable="true"
      height="16"
      icon-name="alert-triangle"
      role="img"
      type="warning"
      width="16"
    />
    <p
      class="c2"
    >
      a message
    </p>
    <button
      aria-label="Dismiss notification"
      class="c3 c4 c5"
      data-testid="dismiss"
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="16"
        icon-name="x"
        width="16"
      />
    </button>
  </div>
</DocumentFragment>
`;
